fix: 카드 기능 수정(초기 명함+프로필 색 고정 로직)